kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: test
  labels:
    app: backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"      
    prometheus.io/path: "/metrics" 
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 5678
    - name: metrics
      port: 9090                      
      targetPort: 9090
